# arkive

./: .gitattributes  .gitignore  .mcp.json  BOOTSTRAP.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose-celery.yml  docker-compose.yml  pyproject.toml
backend/aion2/backend/: __main__.py  app.py
backend/alembic/: env.py
backend/alembic/versions/: 09b4c2ed3c59_add_abyss_artifact_order.py  0c3674211db3_add_index_in_subtype.py  10872b686a2a_add_abyss_artifact_map_state.py  12ada5145648_add_type_to_map.py  15e8acb1c571_add_type_in_marker.py  17e1f705feae_add_map_id_to_abyss_artifact_map_states.py  1ed601ea3315_rename_abyss_artifact_map_states_and_.py  210056fb77d4_marker_subtype_index_constraint.py  31f837b47eb8_add_user_id_and_relationship_to_.py  331a7af2d297_add_abyss_artifact.py  35c0a8fadc42_add_image_id_in_feedback.py  36fcaeea636d_add_timestamp_in_marker_feedback.py  375b71105e4a_add_borders_in_region.py  39c8d7dee620_add_icon_scale.py  45df5528af97_add_subtype_hide_tooltip.py  576f8846cfb8_add_subtype_id_in_feedback.py  5aec73d7e8ac_add_marker_contributor.py  624c2652d8a5_add_region.py  6378f1ba7e6d_update_season_unique_constraint_to_.py  7835381b1e89_add_images.py  786d3deb4834_add_timestamp_in_all_tables.py  788c256bc4ea_update_abyss_artifact_state.py  790bc53091d0_add_map_id_in_feedback.py  7adc02ad4684_add_region_in_season.py  85ba443accd8_add_marker_feedback.py  97ddc17b3822_add_user_marker_progress.py  9a4be225d192_remove_contributor_id_from_abyss_.py  9ce7a556992b_add_season_and_server.py  b7b28198e3ac_add_region_type.py  ba1c3dba228d_add_abyss_artifact_admins_table.py  c00b2d06277e_add_icon_in_marker.py  c85c54c5ec93_remove_unique_constraint_on_abyss_.py  cf911848d34e_add_deleted_in_marker_feedback.py  d3434c43b4a5_initial_schema.py  d8c2780234ca_add_region_id_to_marker.py  e8fca66f703b_add_comments.py  f7524e5cf4eb_change_season_unique_key.py  (+3 more)
backend/scripts/: abyss_a.json  convert.py  init_images.py  init_markers.py  init_regions.py  region_dark.json  region_light.json
tools/: .env.example  .gitignore  README.md  pyproject.toml
tools/aion2-interactive-map-backend-client/: README.md
tools/data_src/: types.yaml  wiki.yaml
tools/palworld/: .gitignore  breeding.py  catalog.py  encyclopedia.py  package-lock.json  package.json
(+1883 files in other folders)
