[project]
name = "aion2-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Liu Yihao",email = "liuyh970615@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pillow (>=10.0.0,<13.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openapi-python-client (>=0.27.1,<0.28.0)",
    "aion2_interactive_map_backend_client",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "frida (>=17.5.1,<18.0.0)",
    "frida-tools (>=14.5.0,<15.0.0)",
    "svgwrite (>=1.4.3,<2.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "opencc-python-reimplemented (>=0.1.7,<0.2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "datamodel-code-generator (>=0.55.0,<0.56.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.uv.sources]
aion2-interactive-map-backend-client = { path = "aion2-interactive-map-backend-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aion2", "palworld"]
